# ChatTemplate

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  docker-compose.yml  run.py
.claude/: settings.json
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_refresh_tokens.py
backend/src/api/: main.py
backend/src/api/auth/: models.py  router.py  schemas.py  service.py
backend/src/api/chat/: llm.py  router.py  schemas.py
backend/src/api/core/: config.py  db.py  deps.py  security.py
backend/src/api/sessions/: models.py  router.py  schemas.py  service.py
backend/tests/: test_health.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: ChatBox.tsx  Message.tsx
frontend/lib/: api.ts  auth.ts  useChatStream.ts
